# financial-api/swagger.json
@@ -6,15 +6,11 @@
     "version": "1.0.0"
   },
   "paths": {
-    "/recomendarProductos": {
+    "/recommendation": {
       "post": {
-        "summary": "Recomendar productos financieros",
-        "consumes": [
-          "application/json"
-        ],
-        "produces": [
-          "application/json"
-        ],
+        "summary": "Recomendar productos financieros segun las condiciones de edad e ingresos de cada cliente ",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
         "parameters": [
           {
             "name": "body",
@@ -59,22 +55,69 @@
           "400": {
             "description": "La solicitud no es válida",
             "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "descripcion": {
-                    "type": "string"
-                  },
-                  "tipo": {
-                    "type": "string"
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 400
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Bad Request"
+                },
+                "errors": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "code": {
+                        "type": "string",
+                        "example": "SA404"
+                      },
+                      "detail": {
+                        "type": "string",
+                        "example": "La longitud de la parte entera del parámetro trackingId es inválida"
+                      }
+                    }
                   }
                 }
               }
             }
-          },
-          "401": {
-            "description": "No autorizado: el cliente no tiene permiso para acceder",
+          }
+        }
+      }
+    },
+    "/recommendationProducts": {
+      "post": {
+        "summary": "Recomendar productos financieros",
+        "consumes": ["application/json"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Lista de clientes segun cada producto teniendo en cuenta las condiciones de este ",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "ingresos": {
+                  "type": "number",
+                  "format": "double"
+                },
+                "ciudadUbicacion": {
+                  "type": "string"
+                },
+                "edad": {
+                  "type": "integer"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Recomendaciones de productos financieros enviadas exitosamente",
             "schema": {
               "type": "array",
               "items": {
@@ -90,69 +133,33 @@
               }
             }
           },
-          "404": {
-            "description": "Recurso no encontrado: la ruta solicitada no existe",
+          "400": {
+            "description": "La solicitud no es válida",
             "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "descripcion": {
-                    "type": "string"
-                  },
-                  "tipo": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Error interno del servidor",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "descripcion": {
-                    "type": "string"
-                  },
-                  "tipo": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          },
-          "502": {
-            "description": "Error en la pasarela",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "descripcion": {
-                    "type": "string"
-                  },
-                  "tipo": {
-                    "type": "string"
-                  }
-                }
-              }
-            }
-          },
-          "504": {
-            "description": "Tiempo de espera de la pasarela agotado",
-            "schema": {
-              "type": "array",
-              "items": {
-                "type": "object",
-                "properties": {
-                  "descripcion": {
-                    "type": "string"
-                  },
-                  "tipo": {
-                    "type": "string"
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 400
+                },
+                "title": {
+                  "type": "string",
+                  "example": "Bad Request"
+                },
+                "errors": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "code": {
+                        "type": "string",
+                        "example": "SA404"
+                      },
+                      "detail": {
+                        "type": "string",
+                        "example": "La longitud de la parte entera del parámetro trackingId es inválida"
+                      }
+                    }
                   }
                 }
               }
